--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,14 +2,23 @@ ja:
   activerecord:
     models:
       task: タスク
+      user: アカウント
     attributes:
       task:
         title: タイトル
         content: 内容
+      user:
+        name: 名前
+        email: メールアドレス
+        password: パスワード
+        password_confirmation: パスワード（確認）
   errors:
     format: "%{attribute}%{message}"
     messages:
       blank: を入力してください
+      taken: はすでに使用されています
+      too_short: は6文字以上で入力してください
+      confirmation: とパスワードの入力が一致しません
   helpers:
     submit:
       create: 登録する
@@ -35,4 +44,4 @@ ja:
     update:
       updated: タスクを更新しました
     destroy:
-      destroyed: タスクを削除しました
+      destroyed: タスクを削除しました
